Update planned/effective date with py-sql task-020150

--- a/view/configuration_form.xml
+++ b/view/configuration_form.xml
@@ -4,7 +4,15 @@
             string="Update Planned Date"/>
         <label name="update_shipment_out"/>
         <field name="update_shipment_out"/>
+        <label name="update_shipment_in"/>
+        <field name="update_shipment_in"/>
+        <label name="update_shipment_internal"/>
+        <field name="update_shipment_internal"/>
         <label name="update_move_in"/>
         <field name="update_move_in"/>
+        <label name="update_move_out"/>
+        <field name="update_move_out"/>
+        <label name="update_move_shipment"/>
+        <field name="update_move_shipment"/>
     </xpath>
 </data>
