--- a/view/update_planned_date_start_form.xml
+++ b/view/update_planned_date_start_form.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of the stock_update_planned_date module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license terms. -->
-<form string="Update Planned Date" col="2">
+<form col="2">
     <image name="tryton-dialog-information" xexpand="0" xfill="0"/>
     <group col="3" id="label_date">
         <label string="Update Planned Date to" id="create"
