--- a/view/configuration_form.xml
+++ b/view/configuration_form.xml
@@ -1,3 +1,7 @@
+<?xml version="1.0"?>
+<!-- This file is part of the stock_update_planned_date module for Tryton.
+The COPYRIGHT file at the top level of this repository contains the full
+copyright notices and license terms. -->
 <data>
     <xpath expr="/form" position="inside">
         <separator id="update_planned_date" colspan="4"
