--- a/view/update_planned_date_start_form.xml
+++ b/view/update_planned_date_start_form.xml
@@ -3,7 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license terms. -->
 <form col="2">
-    <image name="tryton-dialog-information" xexpand="0" xfill="0"/>
+    <image name="tryton-info" xexpand="0" xfill="0"/>
     <group col="3" id="label_date">
         <label string="Update Planned Date to" id="create"
             yalign="0.0" xalign="0.0"/>
